feat: added get secrets route
