# apps/api/src/modules/project/project.controller.ts
@@ -1,4 +1,4 @@
-import { BadRequestException, Body, Controller, Param, Patch, Post } from '@nestjs/common';
+import { BadRequestException, Body, Controller, Get, Param, Patch, Post } from '@nestjs/common';
 import { ApiBearerAuth, ApiTags } from '@nestjs/swagger';
 import { CreateProjectInputDto } from '@the-secret-store/api-interfaces/dtos/project';
 import { isMongoId } from 'class-validator';
@@ -19,6 +19,13 @@ export class ProjectController {
   async create(@CurrentUser() user: AuthPayload, @Body() createProjectDto: CreateProjectInputDto) {
     const project = await this.projectService.create(user.id, createProjectDto);
     return { message: 'Project created successfully', result: project };
+  }
+
+  @Get(':projectId')
+  async getSecrets(@CurrentUser() user: AuthPayload, @Param('projectId') projectId: ObjectIdType) {
+    if (!isMongoId(projectId)) throw new BadRequestException({ message: 'Invalid project id' });
+    const secrets = await this.projectService.getSecrets(user.id, projectId);
+    return { message: 'Project secrets retrieved successfully', result: secrets };
   }
 
   @Patch(':projectId')
